# deal

./: .dockerignore  .editorconfig  .env_dar  .example.env  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FluenceCLA.md  Makefile  README.md  docker-compose.yml  env.ts  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  slither.config.json  tsconfig.json  tsconfig.test.json
.github/: actionlint.yaml  docker-compose.yml  renovate.json
.husky/: pre-commit
aurora/: .gitignore  .npmignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
cli/: README.md  base.aqua  base.sum.air  package.json
deal-indexer-client/: .gitignore  .graphclientrc.yml  README.md  codegen.ts  package-lock.json  package.json
deploy/: 0_deploy_tokens.ts  0_dev_faucet.ts  0_testnet_faucet.ts  1_GlobalConfig.ts  1_local_faucet.ts  2_testnet_faucet.ts  3_GlobalConfig.ts
deployments/: 31337.json  80001.json  addresses=31337.json  dar.json  kras.json  local-ipc.json  local.json  stage.json  testnet.json
docker/: Dockerfile  Dockerfile.anvil  Dockerfile.deploy  deploy.sh  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  entrypoint.sh
hardhatUtils/: hardhatDeploy.ts
integration-tests-clients/: .env.local  README.md  package-lock.json  package.json  vitest.config.ts
integration-tests-contracts/: README.md  package-lock.json  (+2 more)
near/contract/: Cargo.toml  deploy.sh
near/contract/src/: aqua.rs  deal.rs  lib.rs
(+1593 files in other folders)
