[package]
name = "hello_near"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
air = { git = "https://github.com/fluencelabs/aquavm", branch = "master" }
uint = { version = "0.9.3", default-features = false }
serde = { version = "1.0.118", features = [ "derive", "rc" ] }
serde_json = "1.0.61"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
